--- a/.github/workflows/update-submodule.yml
+++ b/.github/workflows/update-submodule.yml
@@ -3,6 +3,11 @@ on:
   repository_dispatch:
     types:
       - update-submodule
+  push:
+    branches:
+      - main
+  schedule:
+    - cron: "0 4 * * *" # every day at 4am
   workflow_dispatch:
 
 jobs:
